--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <div class="header">
         <div class="promo_header">
           <h1>Karapuka Apps 📱</h1>
-          <p>Our user-friendly apps are straightforward and avoid unnecessary features.</p>
+          <p>We design our apps to be clear and easy to use, leaving out unnecessary elements.</p>
         </div>
       </div>
 
     <div class="app_promo">
       <div class="app_promo_image">
-        <img src="images/bedtime_logo.png" width="128px" height="128px" alt="Bedtime Stories for Kids Sleep app" align="left">
+        <img src="images/find-logo.png" width="128px" height="128px" alt="Find and Sort Hidden Objects app" align="left">
         </div>
         <div class="app_promo_title">
           <h2>Find and Sort Hidden Objects</h2>
