--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </div>
       </div> -->
 
-      <p></p>
+      <div></div>
 
       <div class="footer">
         <p>If you have any questions, please email us at <a href="mailto:karapuka.apps@yandex.by">karapuka.apps@yandex.by</a></p>
