--- a/index.html
+++ b/index.html
@@ -27,18 +27,16 @@
             <a href="https://play.google.com/store/apps/details?id=com.find.sort.hidden.objects" target="_blank" rel="noopener noreferrer"><img src="images/googleplay.png" width="180" height="60" alt="Download app on the GooglePlay" hspace="10" align="left"></a>
     </div>
 
-    <!-- <div class="app_promo">
-        <div class="app_promo_image">
-          <img src="images/bible_logo.png" width="128px" height="128px" alt="Bedtime Bible Stories for Kids app" align="left">
-          </div>
-          <div class="app_promo_title">
-            <h2>Bedtime Bible Stories for Kids</h2>
-          </div>
-          <div class="app_promo_links">
-              <a href="https://play.google.com/store/apps/details?id=com.bedtime.bible.audio.stories.kids" target="_blank" rel="noopener noreferrer"><img src="images/googleplay.png" width="180" height="60" alt="Download on the GooglePlay" hspace="10" align="left"></a>
-              <a href="https://apps.apple.com/app/id1606903165" target="_blank" rel="noopener noreferrer"><img src="images/appstore.png" width="180" height="60" alt="Download on the AppStore" hspace="10" align="left"></a>
-          </div>
-      </div> -->
+    <div class="app_promo">
+      <div class="app_promo_image">
+        <img src="images/lullabies-logo.png" width="128px" height="128px" alt="Baby sleep sounds. Lullabies app" align="left">
+        </div>
+        <div class="app_promo_title">
+          <h2>Baby sleep sounds. Lullabies</h2>
+        </div>
+        <div class="app_promo_links">
+            <a href="https://play.google.com/store/apps/details?id=com.baby.sleep.sounds.Lullabies" target="_blank" rel="noopener noreferrer"><img src="images/googleplay.png" width="180" height="60" alt="Download app on the GooglePlay" hspace="10" align="left"></a>
+    </div>
 
       <div class="footer">
         <p>If you have any questions, please email us at <a href="mailto:karapuka.apps@yandex.by">karapuka.apps@yandex.by</a></p>
