--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     </div>
 
     <div class="app_promo">
+    </div>
+
+    <div class="app_promo">
       <div class="app_promo_image">
         <img src="images/lullabies-logo.png" width="128px" height="128px" alt="Baby sleep sounds. Lullabies app" align="left">
         </div>
