--- a/index.html
+++ b/index.html
@@ -41,9 +41,12 @@
             <a href="https://play.google.com/store/apps/details?id=com.baby.sleep.sounds.Lullabies" target="_blank" rel="noopener noreferrer"><img src="images/googleplay.png" width="180" height="60" alt="Download app on the GooglePlay" hspace="10" align="left"></a>
     </div>
 
-      <div class="footer">
+    <div class="app_promo">
+    </div>
+
+    <div class="footer">
         <p>If you have any questions, please email us at <a href="mailto:karapuka.apps@yandex.by">karapuka.apps@yandex.by</a></p>
-      </div>
+    </div>
 
   </body>
 </html>
